[FEAT] Overall: add generic connection button
work

bump version 3.0.5

work

updat universal script

add localization + icon size

work

--- a/XeeSDKResources/Info.plist
+++ b/XeeSDKResources/Info.plist
@@ -16,9 +16,11 @@
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2016 Eliocity. All rights reserved.</string>
+	<key>NSPrincipalClass</key>
+	<string></string>
 </dict>
 </plist>
