--- a/Example/XeeSDK/XeeSDK-Info.plist
+++ b/Example/XeeSDK/XeeSDK-Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>demubi</string>
+				<string>xeesdk-example</string>
 			</array>
 		</dict>
 	</array>
